--- a/FIRST_NOTEBBOK.ipynb
+++ b/FIRST_NOTEBBOK.ipynb
@@ -20,6 +20,24 @@
    "source": [
     "print(\"HELLO WORLD\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0f187e6d-29e8-4dd6-a064-157b5f1d626d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"bgiusgh\")"
+   ]
   }
  ],
  "metadata": {
