--- a/FIRST_NOTEBBOK.ipynb
+++ b/FIRST_NOTEBBOK.ipynb
@@ -38,6 +38,27 @@
    "source": [
     "print(\"bgiusgh\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a562027e-bb51-4710-89b4-50ba662f8772",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(\"ujkgifuw\")"
+   ]
   }
  ],
  "metadata": {
