--- a/FIRST_NOTEBBOK.ipynb
+++ b/FIRST_NOTEBBOK.ipynb
@@ -28,6 +28,7 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {},
      "inputWidgets": {},
+     "nuid": "68fb28e5-8ae5-4411-9ccb-7c5f2ecd43d8",
      "nuid": "0f187e6d-29e8-4dd6-a064-157b5f1d626d",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -36,6 +37,8 @@
    },
    "outputs": [],
    "source": [
+    "print(\"added through test branch\")"
+   ]
     "print(\"bgiusgh\")"
    ]
   },
@@ -79,6 +82,7 @@
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
+   "computePreferences": null,
    "computePreferences": {
     "hardware": {
      "accelerator": null,
